--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lib": "^5.1.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
