--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lib": "^5.1.0",
